# ocr_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
ocr_app/: logger.py  main.py
ocr_app/api/v1/: api.py
ocr_app/api/v1/endpoints/: deneme.py  ocr.py
ocr_app/parsing/: combolist.py  credit_card.py  date.py  domain.py  email.py  hash.py  id_number.py  parse.py  phone_number.py  plate.py  url.py
tests/: test_parse_combolist.py  test_parse_credit_card.py  test_parse_date.py  test_parse_domain.py  test_parse_email.py  test_parse_hash.py  test_parse_id_number.py  test_parse_phone_number.py  test_parse_plate.py  test_parse_url.py
